--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,35 @@
   --Very-light: hsl(0, 0%, 95%);
 }
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+* {
+  margin: 0;
+}
+
+img,
+picture,
+video,
+canvas,
+svg {
+  display: block;
+  max-width: 100%;
+}
+
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  overflow-wrap: break-word;
+}
+
 .attribution {
   font-size: 11px;
   text-align: center;
@@ -31,10 +60,15 @@ div {
   margin: 1em;
 }
 
+div img {
+  margin-bottom: 2em;
+}
+
 button {
   padding: 1em 2.5em;
   border-radius: 2em;
   border: none;
+  margin-bottom: 1em;
 }
 
 main .card-01 {
@@ -127,7 +161,7 @@ button:hover {
   }
   button {
     margin-top: 3.5em;
-    margin-bottom: 2em;
+    margin-bottom: 1em;
   }
 
   p {
