--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,8 @@ body {
 }
 
 main {
-  width: 70%;
+  border: none;
+  max-width: 60%;
 }
 
 div {
@@ -77,8 +78,10 @@ main .card-01 {
   border-top-left-radius: 0.5em;
   border-top-right-radius: 0.5em;
 }
-
 h1 {
+  display: none;
+}
+h2 {
   color: var(--Very-light);
   font-family: "Big Shoulders Display", cursive;
   font-weight: 700;
